tests/bad/type_parameter_copy.ppl
data WeirdList a = Nil | Cons a (WeirdList (a, a));
Cons () (Cons ((),()) Nil)
